Fixing the font-family issue on IOS devices

--- a/styles/base/_fonts.scss
+++ b/styles/base/_fonts.scss
@@ -20,5 +20,5 @@
 }
 
 // Font Stack Properties
-$main: "Kanit", sans-serif;
-$body: "PlusJakartaSans", "Inter", sans-serif;
+$main: "Kanit";
+$body: "PlusJakartaSans", "Inter";
