--- a/styles/components/Hero.module.scss
+++ b/styles/components/Hero.module.scss
@@ -4,6 +4,6 @@
 
 .hero {
 	.externalLink {
-		font-family: $main;
+		font-family: "Kanit";
 	}
 }
