--- a/styles/components/OurPrograms.module.scss
+++ b/styles/components/OurPrograms.module.scss
@@ -10,7 +10,7 @@
 		font-family: $body;
 	}
 	h3 {
-		font-family: $main;
+		font-family: "Kanit";
 	}
 
 	p {
