--- a/styles/components/VideoBlock.module.scss
+++ b/styles/components/VideoBlock.module.scss
@@ -7,6 +7,7 @@
 
 	h4 {
 		font-family: $body;
+		font-family: "Kanit";
 	}
 
 	@media screen and (min-width: 992px) {
