--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -46,7 +46,7 @@ h2,
 h3,
 h4,
 h5 {
-	font-family: $main;
+	font-family: "Kanit";
 }
 
 /* SQUARE BOX CUBES
